<resources>
    <string name="app_name">Дживс</string>

    <string name="location_label">Местоположение</string>
    <string name="location_enable">Включено</string>
    <string name="location_default_sms">Где</string>
    <string name="location_sms_text_lable">Текст СМС для получения координат</string>

    <string name="call_label">Обратный звонок</string>
    <string name="call_sms_text_lable">Текст СМС для обратного звонка</string>
    <string name="call_default_sms">Звонок</string>
    <string name="call_enable">Включено</string>

    <string name="silent_label">Режим вибро</string>
    <string name="silent_sms_text_lable">Текст СМС для перевода в режим вибро</string>
    <string name="silent_default_sms">Вибро</string>
    <string name="silent_enable">Включено</string>

    <string name="normal_label">Обычный режим</string>
    <string name="normal_sms_text_lable">Текст СМС для перевода в обычный режим</string>
    <string name="normal_default_sms">Обычный</string>
    <string name="normal_enable">Включено</string>

    <string name="max_volume_label">Максимальная громкость звонка</string>
    <string name="max_volume_enable">Включено</string>
    <string name="max_volume_default_sms">Громко</string>
    <string name="max_volume_sms_text_lable">Текст СМС для установки максимальной громкости звонка</string>

    <string name="wifi_networks_label">Wi-Fi сети</string>
    <string name="wifi_networks_sms_text_lable">Текст СМС для получения списка Wi-Fi сетей</string>
    <string name="wifi_networks_default_sms">Wifi сети</string>
    <string name="wifi_networks_enable">Включено</string>

    <string name="report_label">Быстрый отчёт</string>
    <string name="report_sms_text_lable">Текст СМС для получения отчёта</string>
    <string name="report_default_sms">Состояние</string>
    <string name="report_enable">Включено</string>

    <string name="find_label">Функция поиска</string>
    <string name="find_sms_text_lable">Текст СМС для запуска функции поиска(телефон
        подаёт сигнал на максимальной громкости и моргает световыми приборами). После команды через
        пробел можно набрать текст, который будет отображаться на экране. Например: Поиск Позвони маме.</string>
    <string name="find_default_sms">Поиск</string>
    <string name="find_enable">Включено</string>

    <string name="wifi_toggle_label">Смена режима WiFi</string>
    <string name="wifi_toggle_sms_text_lable">Текст СМС переключения режима WiFi на противоположный
        (если был включен, то выключится, если отключен, то включится)</string>
    <string name="wifi_toggle_default_sms">WiFi переключить</string>
    <string name="wifi_toggle_enable">Включено</string>

    <string name="battery_low_label">Низкий уровень аккумулятора</string>
    <string name="battery_low_sms_text_lable">На этот номер будет выслано предупреждение о низком заряде аккумулятора.</string>
    <string name="battery_low_default_sms">Низкий заряд аккумулятора</string>
    <string name="battery_low_enable">Включено</string>

    <string name="on_boot_string">Jeeves проснулся.</string>
    <string name="on_stop_string">Jeeves спит.</string>
    <string name="wifi_net_label">Wi-Fi сети</string>
    <string name="enable_jeeves">Включено</string>
    <string name="startup_on_boot_dialog_title">Автозапуск для Дживса</string>
    <string name="startup_on_boot_dialog_text">Для нормальной работы Дживс должен просыпаться при включении устройства, пожалуйста, разрешите ему автоматически запускаться.</string>
    <string name="dont_disturb_perm_dialog_title">Управление режимами</string>
    <string name="dont_disturb_perm_dialog_text">Чтобы иметь возможность изменять режим звонка на \"Вибро\",\"Обычный\" и т.д. нужно дать разрешение Дживсу делать это.</string>
    <string name="perm_dialog_title">Проверьте разрешения</string>
    <string name="perm_dialog_text">Дживсу требуются некоторые разрешения, разрешите всё, если хотите, чтобы работали все функции.
        СМС нужно разрешить в любом случае иначе смысл приложения теряется.</string>
    <string name="xiaomi_perm_dialog_title">У вас Xiaomi!</string>
    <string name="xiaomi_perm_dialog_text">Дживсу требуются некоторые разрешения, убедитесь что во всем списке установлены постоянные разрешения, без запросов.</string>

    <string name="accuracy">Точность,м</string>
    <string name="battery">Батарея</string>
    <string name="ringer_mode_vibrate">Вибро</string>
    <string name="ringer_mode_normal">Обычный</string>
    <string name="ringer_mode_silent">Без звука</string>
    <string name="ringer_mode">Режим</string>

    <string name="wifi_state_disabled">Off</string>
    <string name="wifi_state_disabling">Отключается</string>
    <string name="wifi_state_enabled">On</string>
    <string name="wifi_state_enabling">Включается</string>
    <string name="wifi_label">WiFi</string>
    <string name="ready_to_work">Готов к работе</string>
    <string name="passwd"></string>
    <string name="passwd_summary">Если пароль не пустая строка, то все команды нужно будет отсылать в виде: [Пароль] [Команда], например: Пароль Отчёт</string>
    <string name="passwd_lable">Префикс-пароль</string>

    <string name="app_passwd"></string>
    <string name="app_passwd_summary">Если пароль на приложение не пустая строка, то для доступа к настройкам нужно будет каждый раз вводить его. Не забывайте пароль, восстановить его невозможно.</string>
    <string name="app_passwd_lable">Пароль на приложение</string>

    <string name="alarm_content">Внимание! Инициирован сигнал оповещения!</string>
    <string name="alarm_button">Отключить</string>
    <string name="gps_label">GPS</string>
    <string name="GPS_needed_text">Для отчёта нужен GPS - On</string>
    <string name="login_dialog_message">Введите пароль</string>
    <string name="login_dialog_title">Вход</string>
    <string name="ok_button_text">Ok</string>
    <string name="cancel_button_text">Отмена</string>
    <string name="app_passwd_invalid">Неверный пароль</string>
    <string name="commands_list_sms">Команды</string>
    <string name="commands_list_lable">Список команд</string>
    <string name="commands_list_summary">Текст СМС для получения списка команд и функций включенных на устройстве.</string>
    <string name="google_play_lable">Дживс на Google Play</string>
    <string name="version_lable">Версия</string>
    <string name="help_lable">Помощь</string>
    <string name="perm_write_settings_title">Управление устройством</string>
    <string name="perm_write_settings_text">Для управления яркостью экрана, WiFi и т.д. необходимо разрешить приложению изменять системные настройки. Не беспокойтесь, это не страшно.</string>
    <string name="perm_button_text">Выдать разрешение</string>
    <string name="hello_title">Дживс к вашим услугам</string>
    <string name="hello_text">Поздравляем, Вы установили приложение для управления этим устройством.\n\n

        ВАЖНО!\n Для устойчивой работы, если в вашей системе есть списки защищённых приложений
        или что-то в этом роде, внесите в них Дживс.\n\n

        Обращаем ваше внимание, что Дживс должен работать на управляемом устройстве, за которым будут наблюдать и управлять,
        проще говоря на телефоне ребёнка, а не родителя(хотя в каких-то ситуациях и наоборот :)).\n\n

        Работать с Дживс просто, отправляйте команды на это устройство через СМС-сообщения с любого другого телефона
        (текст команд можно посмотреть в программе) и Дживс обработает их:
        ответит в СМС(например пришлёт свои GPS координаты) или совершит необходимые операции с устройством(включит звук, выключит WiFi и т.д.).\n\n

        Попробуйте прямо сейчас: отправьте через СМС слово "Состояние"(команда по умолчанию) с другого телефона на это устройство.
    </string>
    <string name="check_perm_lable">Проверить разрешения</string>


</resources>