<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="wolandec.smssecretary.CallActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_label"
        android:textColor="@color/mainFontColor"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <Switch
        android:id="@+id/callEnable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_enable"
        android:textColor="@color/mainFontColor"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        tools:layout_editor_absoluteY="36dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_sms_text_lable"
        android:textColor="@color/mainFontColor"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="99dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/call_default_sms"
        android:textColor="@color/mainFontColor"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="120dp" />


</LinearLayout>
