<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="6dp"
        android:text="@string/app_passwd_lable"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/invalidPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="6dp"
        android:text="@string/app_passwd_invalid"
        android:textColor="@color/invalid"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/passwd"/>
</LinearLayout>